# logician

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SPONSORS.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: smts.rs
src/: driver.rs  invariant.rs  lib.rs  multisolver.rs  parser.rs  solver.rs  term.rs
tests/: mod.proptest-regressions  mod.rs
